@@ -3,7 +3,7 @@
 // To use this file, your version of Octave must support dynamic
 // linking.  To find out if it does, type the command
 //
-//   octave_config_info ("ENABLE_DYNAMIC_LINKING")
+//   __octave_config_info__ ("ENABLE_DYNAMIC_LINKING")
 //
 // at the Octave prompt.  Support for dynamic linking is included if
 // this expression is true.
