@@ -25,7 +25,7 @@
 function retval = isunix ()
 
   if (nargin == 0)
-    retval = octave_config_info ("unix");
+    retval = __octave_config_info__ ("unix");
   else
     print_usage ();
   endif
