@@ -63,7 +63,7 @@ function val = pathdef ()
   endif
 
   ## No user octaverc file, locate the site octaverc file.
-  pathdir = octave_config_info ("localstartupfiledir");
+  pathdir = __octave_config_info__ ("localstartupfiledir");
   site_octaverc = fullfile (pathdir, "octaverc");
   site_path = __extractpath__ (site_octaverc);
   if (! isempty (site_path))
